month navigation works

--- a/demo.htm
+++ b/demo.htm
@@ -33,8 +33,8 @@ hi<br><br>
 <script src="datepicker.js"></script>
 
 <script type="text/javascript">
-    //$( '.input01' /*'[type=date]'*/ ).datepicker()
+    $( '.input01' /*'[type=date]'*/ ).datepicker()
     $( '.input02' /*'[type=date]'*/ ).datepicker({
-        class_box_months: 'asdf'
+        class_calendar_body: 'asdf'
     })
 </script>
