multiple pickers + mouse bindings

--- a/demo.htm
+++ b/demo.htm
@@ -12,21 +12,31 @@
     body,
     input {
         font-size: 1.5em;
+        width: 100%;
+        box-sizing: border-box;
     }
 
     th {
         min-width: 50px;
     }
 
+    .holder {
+        width: 360px;
+    }
+
 </style>
 
-hi<br><br>
+<section class="holder">
 
-<input class="input01" type="date">
+    hi<br><br>
 
-<br><br><hr><br><br>
+    <input class="input01" type="date">
 
-<input class="input02" type="date" value="hello">
+    <br><br><hr><br><br>
+
+    <input class="input02" type="date" value="hello">
+
+</section>
 
 
 <script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
