--- a/index.htm
+++ b/index.htm
@@ -5,14 +5,21 @@
 
 <section class="holder">
 
-    <h1><strong title="Pick a Date" class="underline-highlight">pickadate.js</strong> a lightweight jQuery dateinput picker</h1>
-
-    <h3>I didn't like any of the date picker plugins out there. So I made this <small>(<a href="docs.htm">read the documentation</a>)</small>.</h3>
+    <h1><strong title="Pick a Date" class="underline-highlight">pickadate.js</strong></h1>
+    <h2>A lightweight jQuery dateinput picker <small>(<a title="Documentation" href="docs.htm">read the docs</a>)</small></h2>
 
     <fieldset>
         <h3><label for="input_01">Pick a date. Go ahead...</label></h3>
         <input id="input_01" class="datepicker" type="text">
     </fieldset>
+
+    <h3>Bind it like this <small>(<a href="docs.htm">see all the options</a>)</small>:</h3>
+    <pre><code>$( '.datepicker' ).datepicker()</code></pre>
+
+</section>
+
+
+<section class="holder">
 
     <fieldset>
         <h3><label for="input_02">Here's one with the date already filled in:</label></h3>
@@ -59,7 +66,7 @@
 
 <section class="holder aligncenter">
 
-    <p><a class="button-full" href="">Download pickadate.min.js</a></p>
+    <p><a class="button-full" href="">Download pickadate.js</a></p>
     <p><a href="docs.htm">Read the docs</a> or <a href="">view it on Github</a></p>
 
 </section>
