--- a/docs.htm
+++ b/docs.htm
@@ -10,6 +10,8 @@
     <h1><a href="../pickadate/" class="link-inherit"><strong title="Pick a Date" class="underline-highlight">pickadate.js</strong></a></h1>
     <h2>A lightweight jQuery dateinput picker</h2>
 
+    <a href="https://github.com/you"><img width="124" height="124" style="position:absolute;top:0;right:0;border:0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
+
     <h4><a href="">Download pickadate.js</a>, <a href="">play with it on Codepen</a> or <a href="">view it on Github</a></h4>
 
 </section>
@@ -21,8 +23,8 @@
     <pre><code>// Strings
 months_full: [ 'January', 'February', 'March', 'April', 'May', 'June', 'July', 'August', 'September', 'October', 'November', 'December' ],
 months_short: [ 'Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec' ],
-days_full: [ 'Sunday', 'Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday' ],
-days_short: [ 'Sun', 'Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat' ],
+weekdays_full: [ 'Sunday', 'Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday' ],
+weekdays_short: [ 'Sun', 'Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat' ],
 month_prev: '&amp;#9664;',
 month_next: '&amp;#9654;',
 
@@ -30,9 +32,9 @@ month_next: '&amp;#9654;',
 date_min: true,
 date_max: false,
 
-// Calendar widths
-width_min: 256,
-width_max: 320 or none??,
+// Display strings
+show_months_full: true,
+show_weekdays_short: true,
 
 // Classes
 class_picker_open: 'datepicker--opened',
@@ -48,6 +50,7 @@ class_month_prev: 'datepicker--month__prev',
 class_month_next: 'datepicker--month__next',
 class_week: 'datepicker--week',
 class_weekdays: 'datepicker--weekday',
+class_day_disabled: 'datepicker--day__disabled',
 class_day_selected: 'datepicker--day__selected',
 class_day_today: 'datepicker--day__today',
 class_day_infocus: 'datepicker--day__infocus',
@@ -62,7 +65,7 @@ class_box_weekdays: 'datepicker--holder__weekdays'</code></pre>
 <section class="holder">
 
     <fieldset>
-        <h3><label for="input_01">The simple setup:</label></h3>
+        <h3><strong class="underline-highlight">Simple setup</strong></h3>
         <input id="input_01" class="datepicker" type="text">
     </fieldset>
 
@@ -74,14 +77,15 @@ class_box_weekdays: 'datepicker--holder__weekdays'</code></pre>
 <section class="holder">
 
     <fieldset>
-        <h3><label for="input_02">The custom month navigation and weekday tags:</label></h3>
+        <h3><strong class="underline-highlight">Custom month and weekday tags</strong></h3>
         <input id="input_02" class="datepicker" type="text">
     </fieldset>
 
     <pre><code>$( '.datepicker' ).datepicker({
     month_prev: '&amp;larr;',
     month_next: '&amp;rarr;',
-    days_short: [ 'Su', 'Mo', 'Tu', 'We', 'Th', 'Fr', 'Sa' ]
+    weekdays_short: [ 'Su', 'Mo', 'Tu', 'We', 'Th', 'Fr', 'Sa' ],
+    show_months_full: false
 })</code></pre>
 
 </section>
@@ -89,104 +93,153 @@ class_box_weekdays: 'datepicker--holder__weekdays'</code></pre>
 
 <section class="holder">
 
+    <fieldset>
+        <h3><strong class="underline-highlight">Minimum and maximum date range</strong></h3>
+        <input id="input_04" class="datepicker" type="text">
+    </fieldset>
+
+    <pre><code>$( '.datepicker' ).datepicker({
+    date_min: false,
+    date_max: 5
+})
+</code></pre>
+
+    <p>The default settings for <code>date_min</code> is <code>true</code> whereas <code>date_max</code> is <code>false</code>.</p>
+
+    <p><code>date_min</code> and <code>date_max</code> can be either</p>
+    <ol>
+        <li>an array (format: [ YYYY, MM, DD ] )</li>
+        <li>or true / false</li>
+    </ol>
+
+    <p><code>date_max</code> can also be an integer - representing the number of days till the max date.</p>
+
+</section>
+
+
+<section class="holder">
+
     <style>
+        .datepicker-themed {
+            position: relative;
+        }
         .datepicker-themed .datepicker--calendar__box {
             border: none;
-            background: #0089ec;
-            color: #fff;
-            left: 6px;
+            max-width: 100%;
 
-            -webkit-box-shadow: 0 0 0 6px rgba(0,0,0,.1), 0 0 0 1px rgba(0,0,0,.2);
-               -moz-box-shadow: 0 0 0 6px rgba(0,0,0,.1), 0 0 0 1px rgba(0,0,0,.2);
-                    box-shadow: 0 0 0 6px rgba(0,0,0,.1), 0 0 0 1px rgba(0,0,0,.2);
+            -webkit-box-shadow: 0 0 0 6px #e20, 0 24px 54px 18px rgba(0,0,0,.2);
+               -moz-box-shadow: 0 0 0 6px #e20, 0 24px 54px 18px rgba(0,0,0,.2);
+                    box-shadow: 0 0 0 6px #e20, 0 24px 54px 18px rgba(0,0,0,.2);
 
             -webkit-border-radius: 0;
                -moz-border-radius: 0;
                     border-radius: 0;
         }
-        .datepicker-themed .datepicker--year,
-        .datepicker-themed .datepicker--weekday,
-        .datepicker-themed .datepicker--day__outfocus {
-            color: #cae2ff;
-            font-size: .8em;
-        }
-        .datepicker-themed .datepicker--day__infocus {
-            color: #fff;
+        .datepicker-themed .datepicker--month {
+            text-transform: uppercase;
+            font-weight: bold;
+            font-style: italic;
         }
         .datepicker-themed .datepicker--calendar__date {
-            border-left: 1px solid #0099ec;
-            border-top: 1px solid #0099ec;
+            border-left: 1px solid #e20;
+            border-top: 1px solid #e20;
+            border-bottom: 1px solid #e20;
 
-            -webkit-border-radius: 0;
-               -moz-border-radius: 0;
-                    border-radius: 0;
+            -webkit-border-radius: 16px;
+               -moz-border-radius: 16px;
+                    border-radius: 16px;
         }
         .datepicker-themed tr:last-child .datepicker--calendar__date {
-            border-bottom: 1px solid #0099ec;
+            border-bottom: 1px solid #e20;
         }
         .datepicker-themed .datepicker--calendar__date:last-child {
-            border-right: 1px solid #0099ec;
+            border-right: 1px solid #e20;
         }
         .datepicker-themed .datepicker--day__today {
-            background: #0099ec;
-            color: #fff;
+            font-weight: bold;
+            color: #e20;
         }
         .datepicker-themed .datepicker--day__selected,
         .datepicker-themed .datepicker--day__infocus:hover,
         .datepicker-themed .datepicker--day__outfocus:hover,
         .datepicker-themed .datepicker--month__prev:hover,
         .datepicker-themed .datepicker--month__next:hover {
-            background: #fff;
-            color: #0089ec;
+            background: #e20;
+            color: #fff;
             font-weight: bold;
+        }
+        .datepicker-themed .datepicker--day__outfocus {
+            border-color: #ccc !important;
+            color: #999;
+        }
+        .datepicker-themed .datepicker--day__disabled,
+        .datepicker-themed .datepicker--day__disabled:hover {
+            border-color: #ddd !important;
+            color: #bbb !important;
+            background: #f5f5f5 !important;
+            font-weight: 100 !important;
+
+            -moz-opacity: .6;
+                 opacity: .6;
         }
     </style>
 
     <fieldset class="datepicker-themed">
-        <h3><label for="input_03">The themed calendar:</label></h3>
+        <h3><strong class="underline-highlight">Themed calendar</strong></h3>
+        <p>Go crazy.</p>
         <input id="input_03" class="datepicker" type="text">
     </fieldset>
 
-    <pre><code>.datepicker--calendar__box {
+    <pre><code>.datepicker-themed {
+    position: relative;
+}
+.datepicker-themed .datepicker--calendar__box {
     border: none;
-    background: #0089ec;
-    color: #fff;
-    left: 6px;
-    box-shadow: 0 24px 64px 24px rgba(0,0,0,.24);
+    max-width: 100%;
+    box-shadow: 0 0 0 6px #e20, 0 24px 54px 18px rgba(0,0,0,.2);
     border-radius: 0;
 }
-.datepicker--year,
-.datepicker--weekday,
-.datepicker--day__outfocus {
-    color: #cae2ff;
-    font-size: .8em;
-}
-.datepicker--day__infocus {
-    color: #fff;
-}
-.datepicker--calendar__date {
-    border-left: 1px solid #0099ec;
-    border-top: 1px solid #0099ec;
-    border-radius: 0;
-}
-tr:last-child .datepicker--calendar__date {
-    border-bottom: 1px solid #0099ec;
-}
-.datepicker--calendar__date:last-child {
-    border-right: 1px solid #0099ec;
-}
-.datepicker--day__today {
-    background: #0099ec;
-    color: #fff;
-}
-.datepicker--day__selected,
-.datepicker--day__infocus:hover,
-.datepicker--day__outfocus:hover,
-.datepicker--month__prev:hover,
-.datepicker--month__next:hover {
-    background: #fff;
-    color: #0089ec;
+.datepicker-themed .datepicker--month {
+    text-transform: uppercase;
     font-weight: bold;
+    font-style: italic;
+}
+.datepicker-themed .datepicker--calendar__date {
+    border-left: 1px solid #e20;
+    border-top: 1px solid #e20;
+    border-bottom: 1px solid #e20;
+    border-radius: 16px;
+}
+.datepicker-themed tr:last-child .datepicker--calendar__date {
+    border-bottom: 1px solid #e20;
+}
+.datepicker-themed .datepicker--calendar__date:last-child {
+    border-right: 1px solid #e20;
+}
+.datepicker-themed .datepicker--day__today {
+    font-weight: bold;
+    color: #e20;
+}
+.datepicker-themed .datepicker--day__selected,
+.datepicker-themed .datepicker--day__infocus:hover,
+.datepicker-themed .datepicker--day__outfocus:hover,
+.datepicker-themed .datepicker--month__prev:hover,
+.datepicker-themed .datepicker--month__next:hover {
+    background: #e20;
+    color: #fff;
+    font-weight: bold;
+}
+.datepicker-themed .datepicker--day__outfocus {
+    border-color: #ccc !important;
+    color: #999;
+}
+.datepicker-themed .datepicker--day__disabled,
+.datepicker-themed .datepicker--day__disabled:hover {
+    border-color: #ddd !important;
+    color: #bbb !important;
+    background: #f5f5f5 !important;
+    font-weight: 100 !important;
+    opacity: .6;
 }</code></pre>
 
 </section>
@@ -214,10 +267,16 @@ tr:last-child .datepicker--calendar__date {
     $( '#input_02' ).datepicker({
         month_prev: '&larr;',
         month_next: '&rarr;',
-        days_short: [ 'Su', 'Mo', 'Tu', 'We', 'Th', 'Fr', 'Sa' ]
+        weekdays_short: [ 'Su', 'Mo', 'Tu', 'We', 'Th', 'Fr', 'Sa' ],
+        show_months_full: false
     })
 
     $( '#input_03' ).datepicker()
+
+    $( '#input_04' ).datepicker({
+        date_min: false,
+        date_max: 5
+    })
 
 </script>
 
