--- a/docs.htm
+++ b/docs.htm
@@ -12,7 +12,7 @@
 
     <a href="https://github.com/you"><img width="124" height="124" style="position:absolute;top:0;right:0;border:0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
 
-    <h4><a href="">Download pickadate.js</a>, <a href="">play with it on Codepen</a> or <a href="">view it on Github</a></h4>
+    <h4><a href="">Download pickadate.js</a> or <a href="https://github.com/amsul/pickadate.js">view it on Github</a></h4>
 
 </section>
 
@@ -20,7 +20,7 @@
 <section class="holder">
 
     <h3>All the options and default settings:</h3>
-    <pre><code>// Strings
+    <pre><code><a href="#strings">// Strings</a>
 months_full: [ 'January', 'February', 'March', 'April', 'May', 'June', 'July', 'August', 'September', 'October', 'November', 'December' ],
 months_short: [ 'Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec' ],
 weekdays_full: [ 'Sunday', 'Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday' ],
@@ -28,15 +28,15 @@ weekdays_short: [ 'Sun', 'Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat' ],
 month_prev: '&amp;#9664;',
 month_next: '&amp;#9654;',
 
-// Date limits
+<a href="#date_ranges">// Date ranges</a>
 date_min: true,
 date_max: false,
 
-// Display strings
+<a href="#strings">// Display strings</a>
 show_months_full: true,
 show_weekdays_short: true,
 
-// Classes
+<a href="#theme">// Classes</a>
 class_picker_open: 'datepicker--opened',
 class_picker_holder: 'datepicker--holder',
 class_calendar_box: 'datepicker--calendar__box',
@@ -74,7 +74,7 @@ class_box_weekdays: 'datepicker--holder__weekdays'</code></pre>
 </section>
 
 
-<section class="holder">
+<section class="holder" id="strings">
 
     <fieldset>
         <h3><strong class="underline-highlight">Custom month and weekday tags</strong></h3>
@@ -91,7 +91,7 @@ class_box_weekdays: 'datepicker--holder__weekdays'</code></pre>
 </section>
 
 
-<section class="holder">
+<section class="holder" id="date_ranges">
 
     <fieldset>
         <h3><strong class="underline-highlight">Minimum and maximum date range</strong></h3>
@@ -117,7 +117,7 @@ class_box_weekdays: 'datepicker--holder__weekdays'</code></pre>
 </section>
 
 
-<section class="holder">
+<section class="holder" id="theme">
 
     <style>
         .datepicker-themed {
@@ -248,13 +248,13 @@ class_box_weekdays: 'datepicker--holder__weekdays'</code></pre>
 <section class="holder aligncenter">
 
     <p><a class="button-full" href="">Download pickadate.js</a></p>
-    <p><a href="">Play with it on Codepen</a> or <a href="">view it on Github</a></p>
+    <p><a href="https://github.com/amsul/pickadate.js">View it on Github</a></p>
 
 </section>
 
 
 
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><small><small class="dimmed">wassup kids!</small></small>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><small><small class="dimmed">wassup kids!</small></small>
 
 
 <script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
