--- a/index.htm
+++ b/index.htm
@@ -10,7 +10,7 @@
     <h1><strong title="Pick a Date" class="underline-highlight">pickadate.js</strong></h1>
     <h2>A lightweight jQuery dateinput picker <small>(<a title="Documentation" href="docs.htm">read the docs</a>)</small></h2>
 
-    <a href="https://github.com/you"><img width="124" height="124" style="position:absolute;top:0;right:0;border:0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
+    <a href="https://github.com/amsul/pickadate.js"><img width="124" height="124" style="position:absolute;top:0;right:0;border:0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
 
     <fieldset>
         <h3><label for="input_01">Pick a date. Go ahead...</label></h3>
@@ -25,7 +25,7 @@
 <section class="holder aligncenter">
 
     <p><a class="button-full" href="">Download pickadate.js</a></p>
-    <p><a href="docs.htm">Read the docs</a>, <a href="">play with it on Codepen</a> or <a href="">view it on Github</a></p>
+    <p><a href="docs.htm">Read the docs</a> or <a href="https://github.com/amsul/pickadate.js">view it on Github</a></p>
 
 </section>
 
@@ -78,7 +78,7 @@
 <section class="holder aligncenter">
 
     <p><a class="button-full" href="">Download pickadate.js</a></p>
-    <p><a href="docs.htm">Read the docs</a>, <a href="">play with it on Codepen</a> or <a href="">view it on Github</a></p>
+    <p><a href="docs.htm">Read the docs</a> or <a href="https://github.com/amsul/pickadate.js">view it on Github</a></p>
 
 </section>
 
@@ -94,7 +94,7 @@
 </section>
 
 
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 
 <script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
